<resources>
    <string name="facebook_app_id" translatable="false">503174453224789</string>
    <string name="facebook_application_id" translatable="false">503174453224789</string>
    <string name="facebook_login_protocol_scheme" translatable="false">503174453224789</string>
    <string name="idp_name_facebook">Facebook</string>
    <string name="sign_in_with_facebook">Facebook으로 로그인</string>
    <string name="sign_in_with_google">Google로 로그인</string>
    <string name="sign_in_with_email">이메일로 로그인</string>
    <string name="app_name">OQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="slogan">오케이가 아니야, 오큐!</string>
    <string name="dummymoney">300,000</string>
    <string name="dummyperiod">7월 1일 ~ 30일</string>
    <string name="dummydate">12/06/2015</string>
    <string name="dummytext">좋구나</string>
    <string name="dummyname">박개똥</string>
    <string name="easy_input">금액 간편 입력</string>
    <string name="add_myspent">나의 지출내역 추가</string>
    <string name="myspent">나의 지출</string>
    <string name="write_comment">댓글 쓰기</string>
    <string name="add_firstcomment">처음으로 댓글을 달아 주세요</string>
    <string name="no_comment">댓글이 없습니다</string>
    <string name="google_back">Back</string>
    <string name="google_cancel">Cancel</string>
    <string name="google_dismiss">Dismiss</string>
    <string name="google_done">Done</string>
    <string name="google_gotit">Got it</string>
    <string name="google_learnmore">Learn more</string>
    <string name="google_next">다음</string>
    <string name="google_nothanks">No thanks</string>
    <string name="google_notnow">Not now</string>
    <string name="google_ok">OK</string>
    <string name="google_skip">Skip</string>
    <string name="modify_">수정</string>
    <string name="change">변경</string>
    <string name="changeperiod">기간 변경</string>
    <string name="money_sum">총액</string>
    <string name="money_individual">각자</string>
    <string name="money_ammount_neatural">금액</string>
    <string name="title">제목</string>
    <string name="sent">전송되었습니다.</string>
    <string name="lunch_paidforall_fortitle">점심식사 대표로 계산</string>
    <string name="message">message</string>
    <string name="post">post</string>
    <string name="posted">posted</string>
    <string name="photo">photo</string>
    <string name="video">video</string>
    <string name="next_korean">다음</string>
    <string name="search_chatroom">Search Chatroom</string>
    <string name="search_friend">Search Friend</string>
    <string name="search_dotdot">검색..</string>
    <string name="search_people">회원 검색</string>
    <string name="search_people_long">이메일 주소를 입력하여 회원 검색을 합니다</string>
    <string name="youreceivedaninvationforthisalarm_youcaneitheracceptordecline">You received an invation for this alarm. You can either accept or decline.</string>
    <string name="preview">Preview</string>
    <string name="detail">Detail</string>
    <string name="recent_post">Recent post</string>
    <string name="deploy">DEPLOY</string>
    <string name="basic_allcap">BASIC</string>
    <string name="snooze_allcap">SNOOZE</string>
    <string name="interval">Interval</string>
    <string name="repeat">Repeat</string>
    <string name="pref_summary_snooze_interval">pref_summary_snooze_interval</string>
    <string name="pref_summary_snooze_repeat">pref_summary_snooze_repeat</string>
    <string name="add_friends_allcap">ADD FRIEND</string>
    <string name="remove_allcap">REMOVE</string>
    <string name="confirm_allcap">CONFIRM</string>
    <string name="delete_allcap">DELETE</string>
    <string name="block_allcap">BLOCK</string>
    <string name="unfriend_allcap">UNFRIEND</string>
    <string name="undo_allcap">UNDO</string>
    <string name="change_photo">사진 변경</string>
    <string name="change_profile_photo">프로필 사진 변경</string>
    <string name="change_background_photo">배경 사진 변경</string>
    <string name="fail_upload_bg">배경사진 업로드에 실패하였습니다.</string>
    <string name="add_opponents">상대방 추가</string>
    <string name="transaction_empty">청구 또는 거래 내역이 없습니다.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_general_1224">Add friends to messages</string>
    <string-array name="pref_general_1224_titles">
        <item>24:00</item>
        <item>12:00 AM/PM</item>
    </string-array>
    <string-array name="pref_general_1224_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_snooze">Snooze</string>
    <string name="pref_title_snooze_interval">Snooze interval</string>
    <string-array name="pref_snooze_interval_titles">
        <item>1 min</item>
        <item>3 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
    </string-array>
    <string-array name="pref_snooze_interval_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>
    <string name="apply_myspent">요청 내역에 적용</string>
    <string name="delete_all">모두 삭제</string>
    <string name="input_title_and_ammount">제목 및 금액을 모두 입력하세요.</string>
    <string name="app_slogan">OK보다 OQ</string>
    <string name="app_slogan_long">OQ는 우정입니다</string>
    <string name="ok_korean">확인</string>
    <string name="cancel_korean">취소</string>
    <string name="why_need_sms_permission">OQ가 신용카드 사용내역 SMS로부터 당신의 지출 금액을
        자동으로 입력할 수 있도록 SMS 읽기를 허용하여 주세요.</string>
    <string name="sms_read_permission_denied">SMS 읽기가 거부되었습니다.</string>
    <string name="currency_code">KRW</string>
    <string name="learn_more">더 알아보기</string>
    <string name="update">업데이트</string>
    <string name="update_contact">연락처 업데이트</string>
    <string name="begin_sync_contact_long">메뉴에서 나의 전화번호부, 이메일 연락처에 저장된 회원 목록을 업데이트할 수 있습니다.</string>
    <string name="no_contacts">연락처가 없습니다</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="share_this_app">이 앱을 공유하기</string>
    <string name="choose_from_messengers">메신저앱에서 선택</string>
    <string name="transaction_i_get">내가 받는 거래</string>
    <string name="take_receipt">영수증 사진 찍기</string>
    <string name="take_receipt_short">영수증</string>
    <string name="load_receipt">영수증 사진 가져오기</string>
    <string name="receipt_photo">영수증 사진</string>
    <string name="select_receipt_photo">영수증 사진 선택</string>
    <string name="load_sms">카드사용 SMS 가져오기</string>
    <string name="load_sms_short">카드SMS</string>
    <string name="input_manually">직접 입력하기</string>
    <string name="input_manually_short">직접 입력</string>
    <string name="transaction_i_pay">내가 주는 거래</string>
    <string name="choose_from_list">기존 목록에서 선택</string>
    <string name="attach_photo">사진 추가</string>
    <string name="group">그룹</string>
    <string name="title_group">그룹 이름</string>
    <string name="ammount_by_period">회비</string>
    <string name="invoice_once">지금 1회만 청구</string>
    <string name="invoice_period">앞으로 정기적으로 청구</string>
    <string name="every_week">매주</string>
    <string name="every_month">매월</string>
    <string name="every_year">매년</string>
    <string name="ourfloor_group">우리 층 회비 모임</string>
    <string name="member_group">그룹 회원</string>
    <string name="add_member_group">그룹 회원 추가</string>
    <string name="new_group">새 그룹 만들기</string>
    <string name="list_i_am_master">내가 회장인 그룹 목록</string>
    <string name="list_i_am_member">내가 회원인 그룹 목록</string>
    <string name="won10000">10,000 원</string>
    <string name="do_chat">채팅하기</string>
    <string name="invite_to_group">그룹에 초대하기</string>
    <string name="show_profile">프로필 보기</string>
    <string name="select_photo">사진 선택</string>
    <string name="contacts_phone">전화번호부</string>
    <string name="contacts_email">이메일</string>
    <string name="contacts_facebook">Facebook</string>
    <string name="contacts_google">Google+</string>
    <string name="contacts_phone_long">전화번호부 연락처와 동기화</string>
    <string name="contacts_email_long">이메일 연락처와 동기화</string>
    <string name="contacts_facebook_long">Facebook 친구 목록</string>
    <string name="contacts_google_long">Google+ 친구 목록</string>
    <string name="my_account">나의 계정</string>
    <string name="account_buy">점포 계정 구입</string>
    <string name="account_setting">계정 설정</string>
    <string name="logout">로그아웃</string>
    <string name="quickstart">빠른 시작 (내가 받는 거래)</string>
    <string name="see_people_at_my_contact">내 연락처에 있는 사용자 확인</string>
    <string name="select_oponent">상대방을 선택하세요</string>
    <string name="selected_oponent">선택된 상대방</string>
    <string name="sync_phone">전화번호부와 동기화</string>
    <string name="sync_phone_contact">내 전화번호부에 등록된 사람이 이 앱을 사용하고 있는지 확인합니다</string>
    <string name="sync_email_contact">내 이메일 연락처에 등록된 사람이 이 앱을 사용하고 있는지 확인합니다</string>
    <string name="sms_empty">SMS 보관함이 비어 있습니다.</string>
    <string name="card_filter_on">카드 필터 : 켬</string>
    <string name="card_filter_off">카드 필터 : 끔</string>
    <string name="nationalcode">KR</string>
    <string name="nicetomeetyou">반갑습니다!</string>
    <string name="modify">변경</string>
    <string name="tabtochangename">탭하여 이름 변경</string>
</resources>