<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_white_48dp"
            android:title="@string/share_this_app"
            android:actionProviderClass=
                "android.widget.ShareActionProvider"/>
    </group>

    <!--GET-->

    <item android:title="@string/transaction_i_get">
        <menu>
            <item
                android:id="@+id/nav_take_receipt"
                android:icon="@drawable/ic_photo_camera_black_48dp"
                android:title="@string/take_receipt"/>
            <item
                android:id="@+id/nav_load_receipt"
                android:icon="@drawable/ic_photo_library_black_48dp"
                android:title="@string/load_receipt"/>
            <item
                android:id="@+id/nav_load_sms"
                android:icon="@drawable/ic_credit_card_black_48dp"
                android:title="@string/load_sms"/>

            <item
                android:id="@+id/nav_choose_from_list_get"
                android:icon="@drawable/ic_view_list_black_48dp"
                android:title="@string/choose_from_list"/>
            <item
                android:id="@+id/nav_input_manually_get"
                android:icon="@drawable/ic_create_black_48dp"
                android:title="@string/input_manually"/>
        </menu>
    </item>

    <!--PAY-->

    <item android:title="@string/transaction_i_pay">
        <menu>
            <item
                android:id="@+id/nav_choose_from_list_pay"
                android:icon="@drawable/ic_view_list_black_48dp"
                android:title="@string/choose_from_list"/>
            <item
                android:id="@+id/nav_input_manually_pay"
                android:icon="@drawable/ic_create_black_48dp"
                android:title="@string/input_manually"/>

        </menu>
    </item>

    <!--GROUP-->

    <item android:title="@string/group">
        <menu>
            <item
                android:id="@+id/nav_new_group"
                android:icon="@drawable/ic_group_add_black_48dp"
                android:title="@string/new_group"/>
            <item
                android:id="@+id/nav_list_i_am_master"
                android:icon="@drawable/ic_view_list_black_48dp"
                android:title="@string/list_i_am_master"/>
            <item
                android:id="@+id/nav_list_i_am_member"
                android:icon="@drawable/ic_view_list_black_48dp"
                android:title="@string/list_i_am_member"/>
        </menu>
    </item>






    <!--ACCOUNT-->

    <item android:title="@string/my_account">
        <menu>
            <item
                android:id="@+id/nav_account_setting"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/account_setting"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_48dp"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>
