<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/lo"
                  style="@style/loDiaFragWrapTop"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:focusable="true"
            android:focusableInTouchMode="true"/>


        <EditText
            android:id="@+id/etTitle"
            style="@style/EditText.Comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/etAmmount"
            style="@style/EditText.Comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left"
            android:hint="@string/money_ammount_neatural"/>

        <LinearLayout
            android:id="@+id/loBtSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBtSMS"
                style="@style/ImageView.WhiteImageSrcTransparentBg.36"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:src="@drawable/ic_credit_card_white_24dp"/>

            <TextView
                android:id="@+id/tvBtSMS"
                android:layout_width="0dip"
                android:layout_height="56dip"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="@string/load_sms"
                android:textColor="@color/colorPrimary"
                android:textSize="16dip"/>

        </LinearLayout>
    </LinearLayout>

    <!--https://material.google.com/components/dialogs.html#dialogs-specs-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_24dip"/>

    <include
        android:id="@+id/ro_diafrag_okcancel__lo_diafrag"
        layout="@layout/ro_diafrag_okcancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>


