<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cvPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Head Title-->
                    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                              android:id="@+id/tvToGetOrPay"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:padding="@dimen/md_16dip"
                              android:text="@string/dummyname"
                              android:textSize="@dimen/md_24sp"/>

                    <LinearLayout
                        android:id="@+id/loBtAddPeople"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/md_12dip"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivBtAddPeople"
                            style="@style/ImageView.WhiteImageSrcTransparentBg.36"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:src="@drawable/ic_add_white_48dp"/>

                        <TextView
                            android:id="@+id/tvBtAddPeople"
                            android:layout_width="0dip"
                            android:layout_height="56dip"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/add_opponents"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16dip"/>
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/loSelectedPeople"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>


                    //for delete all

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/md_8dip">

                        <TextView
                            android:id="@+id/tvSum"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/md_8dip"
                            android:layout_weight="1"
                            android:text=""
                            android:textSize="@dimen/md_13sp"/>

                        <Button
                            android:id="@+id/btEasyInput"
                            style="@style/Base.Widget.AppCompat.Button.Colored"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/easy_input"
                            android:textColor="@color/colorPrimary"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"

                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cvMySpent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Head Title-->
                    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                              android:id="@+id/tvMySpent"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:padding="@dimen/md_16dip"
                              android:text="@string/myspent"
                              android:textSize="@dimen/md_24sp"/>

                    <LinearLayout
                        android:id="@+id/loBtAddMySpent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/md_12dip"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivBtAddMySpent"
                            style="@style/ImageView.WhiteImageSrcTransparentBg.36"
                            android:layout_width="40dip"
                            android:layout_height="40dip"
                            android:src="@drawable/ic_add_white_48dp"/>

                        <TextView
                            android:id="@+id/tvBtAddMySpent"
                            android:layout_width="0dip"
                            android:layout_height="56dip"
                            android:layout_weight="1"
                            android:gravity="center_vertical|start"
                            android:text="@string/add_myspent"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16dip"/>
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/loMySpent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>


                    //for delete all

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/md_8dip">

                        <TextView
                            android:id="@+id/tvSumMySpent"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/md_8dip"
                            android:layout_weight="1"
                            android:text=""
                            android:textSize="@dimen/md_13sp"/>

                        <Button
                            android:id="@+id/btApplyMySpentToReq"
                            style="@style/Base.Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/apply_myspent"
                            android:textColor="@color/colorPrimary"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"/>




        </LinearLayout>

        <TextView
            android:layout_alignParentBottom="true"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tvNext"
            android:layout_width="match_parent"
            android:layout_height="56dip"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/next_korean"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/colorPrimary"
            android:textSize="16dip"/>
    </RelativeLayout>

</ScrollView>